# memoraeu-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  crypto.py  pyproject.toml  requirements.txt  server.json  server.py  smithery.yaml
.claude-plugin/: marketplace.json
memoraeu_mcp/: __init__.py  main.py  server.py
