[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoraeu-mcp"
version = "0.1.2"
description = "Zero-knowledge persistent memory layer for Claude — MCP server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "MemoraEU", email = "contact@memoraeu.com" }]
keywords = ["mcp", "memory", "llm", "claude", "zero-knowledge", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
]

[project.scripts]
memoraeu-mcp = "memoraeu_mcp.server:run"

[project.urls]
Homepage = "https://app.memoraeu.isquarecube.fr"
Repository = "https://github.com/memoraeu/memoraeu-mcp"
Documentation = "https://docs.memoraeu.com"

[tool.hatch.build.targets.wheel]
packages = ["memoraeu_mcp"]
