[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memoraeu-mcp"
version = "0.1.9"
description = "Zero-knowledge persistent memory layer for Claude — MCP server"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "MemoraEU", email = "contact@memoraeu.com" }]
keywords = ["mcp", "memory", "llm", "claude", "zero-knowledge", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "cryptography>=44.0.0",
]

[project.scripts]
memoraeu-mcp = "memoraeu_mcp.server:run"

[project.urls]
Homepage = "https://app.memoraeu.com"
Repository = "https://github.com/memoraeu/memoraeu-mcp"
Documentation = "https://docs.memoraeu.com"

[tool.hatch.build.targets.wheel]
packages = ["memoraeu_mcp"]
